# nibbler

./: CMakeLists.txt  Game.cpp  Game.h  IGraph.hpp  Makefile  README.md  SDLGraph.cpp  SDLGraph.hpp  SFMLGraph.cpp  SFMLGraph.hpp  a.out  author  main копія.cpp  main.cpp  main2.cpp  main_test.cpp  nibbler  setup.sh
inc/: Game.hpp  IGraph.hpp  Network.hpp  OpenGLGraph copy.hpp  OpenGLGraph.hpp  Rect.hpp  SDLGraph.hpp  SFMLGraph.hpp  Snake.hpp  common.h
libOpenGL/: Makefile  OpenGLGraph.cpp  OpenGLGraph.hpp
libSDL/: Makefile  SDLGraph.cpp  SDLGraph.hpp
libSFML/: Makefile  SFMLGraph.cpp  SFMLGraph.hpp
libSFMLSound/: ISound.hpp  Makefile  SoundSFML.cpp  SoundSFML.hpp
src/: Game.cpp  Network.cpp  OpenGLGraph copy.cpp  OpenGLGraph.cpp  SDLGraph.cpp  SFMLGraph.cpp  Snake.cpp  main.cpp
